Updated application properties

--- a/application.properties
+++ b/application.properties
@@ -13,3 +13,6 @@ spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 spring.jpa.hibernate.ddl-auto=update
 
+## boot strap properties. Innewer versions instead of a creating a bootsrap.properties
+## we can add it to application.properties
+spring.config.import=optional:configserver:http://localhost:8012
