Updated application properties

--- a/application.properties
+++ b/application.properties
@@ -16,3 +16,5 @@ spring.jpa.hibernate.ddl-auto=update
 ## boot strap properties. Innewer versions instead of a creating a bootsrap.properties
 ## we can add it to application.properties
 spring.config.import=optional:configserver:http://localhost:8012
+## This should be same as the name of the cloud config server
+spring.cloud.config.name=PhotoApiConfigServer
