--- a/application.properties
+++ b/application.properties
@@ -18,3 +18,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.config.import=optional:configserver:http://localhost:8012
 ## This should be same as the name of the cloud config server
 spring.cloud.config.name=PhotoApiConfigServer
+
+
+##
+info.app.name=Spring Users Api From Cloud Config
+info.app.description=Spring Users Api From Cloud Config
+info.app.version=1.0.0
+# use wildcards * to expose all endpoints
+# or use  comma delimite dlist
+#Actuator properties
+management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=health,info,beans
+management.endpoints.web.base-path=/actuator
+## custom properties to be passed to application
