--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 ##
-info.app.name=Spring Users Api From Cloud Config
+info.app.name=Spring Users Api From Cloud Config- From Github
 info.app.description=Spring Users Api From Cloud Config
 info.app.version=1.0.0
 # use wildcards * to expose all endpoints
