--- a/application.properties
+++ b/application.properties
@@ -9,3 +9,9 @@ management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.include=health,info,beans
 management.endpoints.web.base-path=/actuator
 ## custom properties to be passed to application
+
+spring.profiles.active=git
+spring.cloud.config.server.git.uri=https://github.com/AnkanP/PhotoAppConfiguration
+spring.cloud.config.server.git.username=Ankanp
+spring.cloud.config.server.git.password=Manu4life@1
+spring.cloud.config.server.git.clone-on-start=true
