--- a/users-ws.properties
+++ b/users-ws.properties
@@ -8,4 +8,4 @@ info.app.name=Spring Users Api From Cloud Config-Github
 info.app.description=Spring Users Api From Cloud Config-Github
 info.app.version=1.0.0
 
-spring.config.import=optional:configserver://http://54.160.19.182:8012
+spring.config.import=optional:configserver:http://54.160.19.182:8012
