--- a/users-ws.properties
+++ b/users-ws.properties
@@ -1,8 +1,8 @@
-eureka.client.service-url.defaultZone=http://172.31.3.216:8010/eureka" 
-spring.datasource.url=jdbc:mysql://172.31.3.216:3306/photo-app?useSSL=false&serverTimezone=UTC" 
-spring.datasource.username=crawlerp" 
-spring.datasource.password=Manu4life@1" 
-spring.config.import=optional:configserver:http://172.31.2.215:8012"
+eureka.client.service-url.defaultZone=http://172.31.3.216:8010/eureka
+spring.datasource.url=jdbc:mysql://172.31.3.216:3306/photo-app?useSSL=false&serverTimezone=UTC
+spring.datasource.username=crawlerp
+spring.datasource.password=Manu4life@1
+spring.config.import=optional:configserver:http://172.31.2.215:8012
 
 info.app.name=Spring Users Api From Cloud Config-Github
 info.app.description=Spring Users Api From Cloud Config-Github
