--- a/random.properties
+++ b/random.properties
@@ -1,5 +1,5 @@
 
-info.app.name=Spring Users Api From Cloud Config-Random
+info.app.name=Spring Users Api From Cloud Config-Github
 info.app.description=Spring Users Api From Cloud Config-Github
 info.app.version=1.0.0
 
